# Demo

./: README.md  init.sh  install_cli.sh  lint.sh  lint_format.sh  pre_push.sh  pyproject.toml  test.sh
.github/workflows/: ci.yaml
calculator/src/: cli.py  logic.py
calculator/tests/: test_cli.py  test_logic.py
