[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["Chulsoon Patrick Yang <patrick.yang.1248@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
