[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["Chulsoon Patrick Yang <patrick.yang.1248@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
yamlfix = "^1.11.0"

[tool.poetry.scripts]
calculator = "calculator.src.cli:main"

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

